--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pyserial<4.0
 click<=8.0
 appdirs
 # needed by appdirs, on Windows
-pywin32
+# pywin32
 pyinstaller==4.2
 # needed by pyinstaller, on Windows
-pywin32-ctypes
+# pywin32-ctypes
