--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install wx python
+        sudo apt install -y python3-wxgtk4.0
     - name: Test with unittest
       run: |
         python -m unittest discover src/jolt/driver/test
