--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install wx python
+      run: |
         sudo apt install -y python3-wxgtk4.0
-    - name: Test with unittest
+    - name: Test driver with unittest
       run: |
         python -m unittest discover src/jolt/driver/test
+    - name: Test gui with unittest
+      run: |
+        python -m unittest discover src/jolt/gui/test
